; ModuleID = '/home/carl/AnghaBench/libgit2/tests/revwalk/extr_basic.c_test_revwalk_basic__glob_heads_with_invalid.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/revwalk/extr_basic.c_test_revwalk_basic__glob_heads_with_invalid.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [9 x i8] c"testrepo\00", align 1
@.str.1 = private unnamed_addr constant [33 x i8] c"testrepo/.git/refs/heads/garbage\00", align 1
@.str.2 = private unnamed_addr constant [10 x i8] c"not-a-ref\00", align 1
@_walk = common dso_local global i32 0, align 4
@.str.3 = private unnamed_addr constant [6 x i8] c"heads\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_revwalk_basic__glob_heads_with_invalid() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = call i32 @revwalk_basic_setup_walk(i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0))
  %4 = call i32 @cl_git_mkfile(i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str.1, i64 0, i64 0), i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.2, i64 0, i64 0))
  %5 = load i32, i32* @_walk, align 4
  %6 = call i32 @git_revwalk_push_glob(i32 %5, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.3, i64 0, i64 0))
  %7 = call i32 @cl_git_pass(i32 %6)
  store i32 0, i32* %1, align 4
  br label %8

8:                                                ; preds = %14, %0
  %9 = load i32, i32* @_walk, align 4
  %10 = call i32 @git_revwalk_next(i32* %2, i32 %9)
  %11 = icmp ne i32 %10, 0
  %12 = xor i1 %11, true
  br i1 %12, label %13, label %17

13:                                               ; preds = %8
  br label %14

14:                                               ; preds = %13
  %15 = load i32, i32* %1, align 4
  %16 = add nsw i32 %15, 1
  store i32 %16, i32* %1, align 4
  br label %8

17:                                               ; preds = %8
  %18 = load i32, i32* %1, align 4
  %19 = call i32 @cl_assert_equal_i(i32 20, i32 %18)
  ret void
}

declare dso_local i32 @revwalk_basic_setup_walk(i8*) #1

declare dso_local i32 @cl_git_mkfile(i8*, i8*) #1

declare dso_local i32 @cl_git_pass(i32) #1

declare dso_local i32 @git_revwalk_push_glob(i32, i8*) #1

declare dso_local i32 @git_revwalk_next(i32*, i32) #1

declare dso_local i32 @cl_assert_equal_i(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
